[package]
name = "stress-ws"
version = "0.2.0"
edition = "2021"
description = "Knotion WebSocket stress test — realistic multi-scenario simulation"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
